--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background-color: #0B0C10;
 }
 nav{
-    background-color: #171818;
+    background-color: #1f2833;
     display: flex;
     align-items: center;
     gap: 20px;
@@ -24,7 +24,7 @@ ul{
     display: flex;
     color: rgb(0, 0, 15);
     gap: 20px;
-    background-color: #171818;
+    background-color: #1f2833;
 }
 ul li{
     list-style: none;
@@ -150,6 +150,6 @@ ul li:hover{
 footer{
     color: aliceblue;
     text-align: center;
-    background-color: #171818;
+    background-color: #1f2833;
     padding: 10px;  
 }
